    (Closes: #270583)
  * Document the removal of the severity-inflation code.
    (Closes: #271067)
  * Add quit possibility to all "yes/no" prompts.  (Closes: #271073)
  * Fix wording of SMTP server information prompt.  (Closes: #270078)
  * Add example X-Debbugs-No-Ack header to reportbug.conf.
    (Closes: #271316)
  * Add X-Debbugs-CC prompting with mode >= Advanced.  (Closes: #271135)

 -- Chris Lawrence <lawrencc@debian.org>  Sun, 12 Sep 2004 20:32:38 -0500

reportbug (2.99.2) experimental; urgency=low

  * Fix problem where a package with no dependencies, if in the
    Report-With list for a package, would pull in version info of
    everything installed on your system.  (Closes: #264466)
  * Warn that --gpg/--pgp is ignored in MUA and printonly modes.

 -- Chris Lawrence <lawrencc@debian.org>  Sun,  8 Aug 2004 21:23:10 -0400

reportbug (2.99.1) experimental; urgency=low

  * Fix stupid typos.  (Closes: #263459, #263460)

 -- Chris Lawrence <lawrencc@debian.org>  Wed,  4 Aug 2004 17:54:48 -0400

reportbug (2.99.0) experimental; urgency=low

  * Upload to experimental since sarge is now frozen for base packages
    (and there may be a need for a future RC upload).
  * Fix redirection problem in handle_bugscript that emerged due to bash
    3.0.  (Closes: #262557)
  * Add support for "RFH" in the WNPP codepath.  (Closes: #262593)
    Per discussion on debian-devel, a X-Debbugs-CC header will be included
    to debian-devel for these posts.
  * Use dh_installman in rules file instead of dh_installmanpages.

 -- Chris Lawrence <lawrencc@debian.org>  Mon,  2 Aug 2004 17:18:20 -0400

reportbug (2.64) unstable; urgency=low

  * Fix incorrect detection of some uninstalled binaries as source
    packages.  (Closes: #259001)
  * Fix incorrect attachment/inclusion filenames leading to spawning the
    editor.  (Closes: #259463)
  * If signing fails, don't bail out; instead, send the message unsigned.
    (Closes: #259649)